--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,24 @@
 <html>
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+  <meta charset="utf-8">
+  <title>Unsplash It</title>
+  <meta name="description" content="Beautiful placeholders using images from unsplash">
+  <meta name="keywords" content="placeholders,images,unsplash">
+  <meta name="author" content="David Marby (http://dmarby.se)">
+  <meta name="robots" content="all">
+  
+  <meta property="og:site_name" content="Unsplash it">
+  <meta property="og:title" content="Unsplash it">
+  <meta property="og:description" content="Beautiful placeholders using images from unsplash">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="http://unsplash.it/100/100">
+  <meta property="og:url" content="http://unsplash.it">
+
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
+  <link rel="dns-prefetch" href="//code.jquery.com">
+  <link rel="dns-prefetch" href="//www.google-analytics.com">
+  <link rel="dns-prefetch" href="//unsplash.it">
   <style>
     * { 
       text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; box-sizing: border-box; 
@@ -85,6 +103,7 @@
     }
 
   </style>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript">
@@ -241,6 +260,7 @@
         <div class="col-lg-12">
           <p>Created by <a href="http://dmarby.se">David Marby</a></p>
           <p><a href="http://github.com/DMarby/unsplash-it">Source</a></p>
+          <p><a href="https://www.digitalocean.com/?refcode=b948482c9da6">Hosted by DigitalOcean</a></p>
         </div>
       </div>
     </div>
