--- a/public/index.html
+++ b/public/index.html
@@ -258,7 +258,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Created by <a href="http://dmarby.se">David Marby</a></p>
+          <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="http://github.com/Nijikokun">Nijiko Yonskai</a></p>
           <p><a href="http://github.com/DMarby/unsplash-it">Source</a></p>
           <p><a href="https://www.digitalocean.com/?refcode=b948482c9da6">Hosted by DigitalOcean</a></p>
         </div>
