Use newer sharp, add gravity option, use sharp for metadata instead of image size, add /:size and /g/:size to get square, add ?blur functionality

--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,8 @@
           <h2 class="section-heading">Basic Usage</h2>
           <p class="lead">Just put your image size (width &amp; height) after our URL and you'll get a placeholder.</p>
           <pre><code>http://unsplash.it/200/300</code></pre>
+          <p class="lead">To get a square image, just put the size you want.</p>
+          <pre><code>http://unsplash.it/200</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
           <img class="img-responsive" src="http://unsplash.it/458/354" alt="">
@@ -243,17 +245,16 @@
   <div class="content-section-left">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
           <div class="clearfix"></div>
           <h2 class="section-heading">Random image</h2>
           <p class="lead">Get a random image by appending <code>?random</code> to the end of the url.</p>
           <pre><code>http://unsplash.it/200/300/?random</code></pre>
         </div>
-        <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
           <img class="img-responsive random-image" src="http://unsplash.it/458/354?random" alt="">
         </div>
       </div>
-
     </div>
   </div>
 
@@ -276,13 +277,13 @@
   <div class="content-section-left">
     <div class="container">
       <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
           <div class="clearfix"></div>
           <h2 class="section-heading">List images</h2>
           <p class="lead">Get a list of images by using the endpoint <code>/list</code></p>
           <pre><code>http://unsplash.it/list</code></pre>
         </div>
-        <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
           <pre><code>[
     {
         "format": "jpeg",
@@ -304,21 +305,54 @@
   </div>
 </div>
 
-<div class="content-section-right">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-5 col-sm-6">
-        <div class="clearfix"></div>
-        <h2 class="section-heading">Specific Image</h2>
-        <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
-        <pre><code>http://unsplash.it/200/300?image=0</code></pre>
-      </div>
-      <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-        <img class="img-responsive" src="http://unsplash.it/458/354?image=0" alt="">
+  <div class="content-section-right">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-sm-6">
+          <div class="clearfix"></div>
+          <h2 class="section-heading">Specific Image</h2>
+          <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
+          <pre><code>http://unsplash.it/200/300?image=0</code></pre>
+        </div>
+        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+          <img class="img-responsive" src="http://unsplash.it/458/354?image=0" alt="">
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  <div class="content-section-left">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+          <div class="clearfix"></div>
+          <h2 class="section-heading">Blurred image</h2>
+          <p class="lead">Get a blurred image by appending <code>?blur</code> to the end of the url.</p>
+          <pre><code>http://unsplash.it/200/300/?blur</code></pre>
+        </div>
+        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+          <img class="img-responsive" src="http://unsplash.it/458/354?image=0&blur" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="content-section-right">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-sm-6">
+          <div class="clearfix"></div>
+          <h2 class="section-heading">Crop Gravity</h2>
+          <p class="lead">Select the cropping gravity by adding <code>?gravity=</code> to the end of the url.</p>
+          <p>Valid options are: <code>north, east, south, west, center</code></p>
+          <pre><code>http://unsplash.it/200/300/?gravity=east</code></pre>
+        </div>
+        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+          <img class="img-responsive" src="http://localhost:5000/458/354?gravity=east" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
 
 <!-- Footer -->
 <footer>
