Change description of Crop Gravity

--- a/public/index.html
+++ b/public/index.html
@@ -343,7 +343,7 @@
         <div class="col-lg-5 col-sm-6">
           <div class="clearfix"></div>
           <h2 class="section-heading">Crop Gravity</h2>
-          <p class="lead">Select the cropping gravity by adding <code>?gravity=</code> to the end of the url.</p>
+          <p class="lead">Select the cropping gravity by adding <code>?gravity</code> to the end of the url.</p>
           <p>Valid options are: <code>north, east, south, west, center</code></p>
           <pre><code>http://unsplash.it/200/300/?gravity=east</code></pre>
         </div>
