--- a/public/index.html
+++ b/public/index.html
@@ -348,7 +348,7 @@
           <pre><code>http://unsplash.it/200/300/?gravity=east</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://localhost:5000/458/354?gravity=east" alt="">
+          <img class="img-responsive" src="http://unsplash.it/458/354?gravity=east" alt="">
         </div>
       </div>
     </div>
