--- a/public/index.html
+++ b/public/index.html
@@ -158,14 +158,21 @@
           easing: 'swing', 
           step: function (now) {
             element.text((Math.floor(now) + suffix).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,"));
+          },
+          complete: function () {
+            countingFromZero = false;
           }
         });
       }
 
       var first = true;
+      var countingFromZero = true;
 
       var socket = io.connect('http://stats.unsplash.it');
       socket.on('stats', function (data) {
+        if (!first && countingFromZero) {
+          return;
+        }
         countToNumber($('.imageCounter'), data.count, '', first ? 2000 : 800);
         countToNumber($('.bandwidthCounter'), Math.round((data.bandWidth / 1024 / 1024)), '+ GB', first ? 1000 : 800);
         countToNumber($('.images'), data.images, '', first ? 1000 : 800);
