Update example json

--- a/public/index.html
+++ b/public/index.html
@@ -294,17 +294,13 @@
           <pre><code>[
     {
         "format": "jpeg",
-        "width": 2500,
-        "height": 1667,
-        "filename": "01.jpg",
-        "id": 0
-    },
-    {
-        "format": "jpeg",
-        "width": 2500,
-        "height": 1667,
-        "filename": "02.jpg",
-        "id": 1
+        "width": 5616,
+        "height": 3744,
+        "filename": "51492538696.jpg",
+        "id": 0,
+        "author": "Alejandro Escamilla",
+        "author_url": "http://alejandroescamilla.com/",
+        "post_url": "http://unsplash.com/post/51492538696/download-by-alejandro-escamilla"
     }
 ]       </code></pre>
       </div>
