--- a/public/gallery.html
+++ b/public/gallery.html
@@ -56,6 +56,10 @@
       font-weight: 700;
     }
 
+    .template {
+      display: none;
+    }
+
     .intro-header {
       text-align: center;
       color: #f8f8f8;
@@ -144,8 +148,25 @@
   <script src="http://stats.unsplash.it/socket.io/socket.io.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
+      var right = true;
       $.ajax({ url: 'http://unsplash.it/list' }).done(function (data) {
-        console.log(data);
+        for (var i in data) {
+          var $template;
+          if (right) {
+            right = false;
+            $template = $('[data-template="right"] .content-section-right').clone();
+          } else {
+            right = true;
+            $template = $('[data-template="left"] .content-section-left').clone();
+          }
+
+          $template.find('.section-heading').html(data[i].author);
+          $template.find('.lead').text(data[i].author_url);
+          $template.find('code').html('http://unsplash.it/200/300?image=' + data[i].id);
+          $template.find('img').attr('src', 'http://unsplash.it/458/354?image=' + data[i].id);
+          $('.content-section').after($template);
+
+        }
       });
 
       var setupRandomImage = function (element) {
@@ -157,10 +178,8 @@
         $element.css('background-image', 'url('+src+')');
       }
 
-      setInterval(function () {
-        var $element = $('.random-image')
-        $element.attr('src', 'http://unsplash.it/458/354?random&time=' + (+new Date()));
-      }, 1000 * 5)
+      setupRandomImage('.intro-header');
+      setupRandomImage('footer');
 
       var countToNumber = function (element, number, suffix, duration) {
         $({count: parseInt(element.text().split("+")[0].replace(/\,/g, ''))}).animate({count: number}, {
@@ -241,132 +260,6 @@
     </div>
   </div>
 
-  <div class="content-section-right">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-sm-6">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">Basic Usage</h2>
-          <p class="lead">Just put your image size (width &amp; height) after our URL and you'll get a placeholder.</p>
-          <pre><code>http://unsplash.it/200/300</code></pre>
-          <p class="lead">To get a square image, just put the size you want.</p>
-          <pre><code>http://unsplash.it/200</code></pre>
-        </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-section-left">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">Random image</h2>
-          <p class="lead">Get a random image by appending <code>?random</code> to the end of the url.</p>
-          <pre><code>http://unsplash.it/200/300/?random</code></pre>
-        </div>
-        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
-          <img class="img-responsive random-image" src="http://unsplash.it/458/354?random" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-section-right">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-sm-6">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">Grayscale</h2>
-          <p class="lead">Use the <code>/g/</code> path to greyscale the image.</p>
-          <pre><code>http://unsplash.it/g/200/300</code></pre>
-        </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/g/458/354" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-section-left">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">List images</h2>
-          <p class="lead">Get a list of images by using the endpoint <code>/list</code></p>
-          <pre><code>http://unsplash.it/list</code></pre>
-        </div>
-        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
-          <pre><code>[
-    {
-        "format": "jpeg",
-        "width": 5616,
-        "height": 3744,
-        "filename": "51492538696.jpg",
-        "id": 0,
-        "author": "Alejandro Escamilla",
-        "author_url": "http://alejandroescamilla.com/",
-        "post_url": "http://unsplash.com/post/51492538696/download-by-alejandro-escamilla"
-    }
-]       </code></pre>
-      </div>
-    </div>
-  </div>
-</div>
-
-  <div class="content-section-right">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-sm-6">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">Specific Image</h2>
-          <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
-          <pre><code>http://unsplash.it/200/300?image=0</code></pre>
-        </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354?image=0" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-section-left">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">Blurred image</h2>
-          <p class="lead">Get a blurred image by appending <code>?blur</code> to the end of the url.</p>
-          <pre><code>http://unsplash.it/200/300/?blur</code></pre>
-        </div>
-        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354?image=0&blur" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="content-section-right">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-5 col-sm-6">
-          <div class="clearfix"></div>
-          <h2 class="section-heading">Crop Gravity</h2>
-          <p class="lead">Select the cropping gravity by adding <code>?gravity</code> to the end of the url.</p>
-          <p>Valid options are: <code>north, east, south, west, center</code></p>
-          <pre><code>http://unsplash.it/200/300/?gravity=east</code></pre>
-        </div>
-        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354?gravity=east" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-
 <!-- Footer -->
 <footer>
   <div class="footer-overlay">
@@ -381,5 +274,42 @@
     </div>
   </div>
 </footer>
+
+<div class="template" data-template="right">
+  <div class="content-section-right">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-sm-6">
+          <div class="clearfix"></div>
+          <h2 class="section-heading">Random image</h2>
+          <p class="lead">Get a random image by appending <code>?random</code> to the end of the url.</p>
+          <pre><code>http://unsplash.it/200/300/?random</code></pre>
+        </div>
+        <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+          <img class="img-responsive" src="http://unsplash.it/458/354" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="template" data-template="left">
+  <div class="content-section-left">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+          <div class="clearfix"></div>
+          <h2 class="section-heading">Random image</h2>
+          <p class="lead">Get a random image by appending <code>?random</code> to the end of the url.</p>
+          <pre><code>http://unsplash.it/200/300/?random</code></pre>
+        </div>
+        <div class="col-lg-5 col-sm-pull-6 col-sm-6">
+          <img class="img-responsive" src="http://unsplash.it/458/354?random" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
