--- a/public/index.html
+++ b/public/index.html
@@ -36,150 +36,20 @@
   <link rel="apple-touch-icon" sizes="72x72" href="favicon-72.png">
   <link rel="apple-touch-icon" href="favicon-57.png">
 
-  <style>
-    * { 
-      text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; box-sizing: border-box; 
-    }
-
-    body {
-      font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    a {
-      font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-      font-weight: 700;
-    }
-
-    .intro-header {
-      text-align: center;
-      color: #f8f8f8;
-      background: #000;
-      background-size: cover;
-      font-family: Lato;
-    }
-
-    .overlay {
-      padding-top: 100px;
-      padding-bottom: 100px;
-      background: rgba(0,0,0,0.6);
-    }
-
-    .intro-message h1 {
-      font-family: Lato;
-      font-weight: 300;
-    }
-
-    .intro-message h3 {
-      font-family: Lato;
-      color: hsla(0, 100%, 100%, 0.6);
-    }
-
-    .intro-message h3 a {
-      color: rgba(255,255,255,0.8);
-    }
-
-    .content-section {
-      padding: 50px 0;
-      text-align: center;
-    }
-
-    .content-section h3 {
-      margin-top: 0px;
-    }
-
-    .content-section-right {
-      padding: 50px 0;
-      background: hsl(211, 20%, 97%);
-    }
-
-    .content-section-left {
-      padding: 50px 0;
-      border-top: 1px solid hsl(211, 20%, 91%);
-      border-bottom: 1px solid hsl(211, 20%, 91%);
-    }
-
-    pre {
-      background-color: hsl(211, 20%, 96%) !important;
-      border: 1px solid hsl(211, 20%, 91%) !important;
-      border-radius: 4px !important;
-      box-shadow: inset 0 1px 2px hsl(211, 20%, 94%) !important;
-    }
-
-    footer {
-      text-align: center;
-      color: hsla(0, 100%, 100%, 0.6);
-      background: #000;
-      background-size: cover;
-      font-family: Lato;
-    }
-
-    footer a, footer a:hover {
-      color: rgba(255,255,255,0.8); 
-    }
-
-    .footer-overlay {
-      padding: 50px 0;
-      background: rgba(0,0,0,0.6);
-    }
-
-  </style>
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+  
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="http://stats.unsplash.it/socket.io/socket.io.js"></script>
-  <script type="text/javascript">
+  <script type="text/javascript" src="main.js"></script>
+  <script>
     $(document).ready(function() {
-      var setupRandomImage = function (element) {
-        var $element = $(element);
-        var width = $element.width(); 
-        var height = $element.outerHeight();
-        var src = 'http://unsplash.it/' + width + '/' + height + '?random&element=' + $element.prop('tagName');
-
-        $element.css('background-image', 'url('+src+')');
-      }
-
-      setupRandomImage('.intro-header');
-      setupRandomImage('footer');
-
       setInterval(function () {
         var $element = $('.random-image')
         $element.attr('src', 'http://unsplash.it/458/354?random&time=' + (+new Date()));
       }, 1000 * 5)
-
-      var countToNumber = function (element, number, suffix, duration) {
-        $({count: parseInt(element.text().split("+")[0].replace(/\,/g, ''))}).animate({count: number}, {
-          duration: duration ? duration : 1000,
-          easing: 'swing', 
-          step: function (now) {
-            element.text((Math.floor(now) + suffix).replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,"));
-          },
-          complete: function () {
-            countingFromZero = false;
-          }
-        });
-      }
-
-      var first = true;
-      var countingFromZero = true;
-
-      var socket = io.connect('http://stats.unsplash.it');
-      socket.on('stats', function (data) {
-        if (!first && countingFromZero) {
-          return;
-        }
-        countToNumber($('.imageCounter'), data.count, '', first ? 2000 : 800);
-        countToNumber($('.bandwidthCounter'), Math.round((data.bandWidth / 1024 / 1024)), '+ GB', first ? 1000 : 800);
-        countToNumber($('.images'), data.images, '', first ? 1000 : 800);
-        if (first) {
-          first = false;
-        }
-      });
     });
   </script>
   <script>
@@ -216,8 +86,10 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
+          <a href="http://unsplash.it/images">
             <h2 class="images">0</h2>
             <h3>Images</h3>
+          </a>
         </div>
         <div class="col-lg-4">
             <h2 class="imageCounter">0</h2>
