Cleanup, lazy loading of images on gallery page, better style on link hover

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,9 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="intro-message">
-              <h1>Unsplash It</h1>
+              <a href="http://unsplash.it">
+                <h1>Unsplash It</h1>
+              </a>
               <h3>Beautiful placeholders using images from <a href="http://unsplash.com">unsplash</a></h3>
             </div>
           </div>
@@ -188,6 +190,7 @@
           <h2 class="section-heading">Specific Image</h2>
           <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
           <pre><code>http://unsplash.it/200/300?image=0</code></pre>
+          <p>You can find a list of all images <a href="http://unsplash.it/images">here.</a></p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
           <img class="img-responsive" src="http://unsplash.it/458/354?image=0" alt="">
