--- a/public/index.html
+++ b/public/index.html
@@ -239,7 +239,7 @@
       <div class="row">
         <div class="col-lg-12">
           <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="http://github.com/Nijikokun">Nijiko Yonskai</a></p>
-          <p><a href="http://github.com/DMarby/unsplash-it">Source</a></p>
+          <p><a href="http://github.com/DMarby/unsplash-it">Source</a>  - <a href="https://github.com/DMarby/unsplash-it/blob/master/LICENSE.md">License</a></p>
           <p><a href="https://www.digitalocean.com/?refcode=b948482c9da6">Hosted by DigitalOcean</a></p>
         </div>
       </div>
