--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
   <meta property="og:title" content="Unsplash it">
   <meta property="og:description" content="Beautiful placeholders using images from unsplash">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="http://unsplash.it/250/250">
-  <meta property="og:url" content="http://unsplash.it">
+  <meta property="og:image" content="https://unsplash.it/250/250">
+  <meta property="og:url" content="https://unsplash.it">
 
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link rel="dns-prefetch" href="//maxcdn.bootstrapcdn.com">
@@ -36,19 +36,19 @@
   <link rel="apple-touch-icon" sizes="72x72" href="favicon-72.png">
   <link rel="apple-touch-icon" href="favicon-57.png">
 
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="http://stats.unsplash.it/socket.io/socket.io.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script src="https://stats.unsplash.it/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script>
     $(document).ready(function() {
       setInterval(function () {
         var $element = $('.random-image')
-        $element.attr('src', 'http://unsplash.it/458/354?random&time=' + (+new Date()));
+        $element.attr('src', 'https://unsplash.it/458/354?random&time=' + (+new Date()));
       }, 1000 * 5)
     });
   </script>
@@ -70,10 +70,10 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="intro-message">
-              <a href="http://unsplash.it">
+              <a href="https://unsplash.it">
                 <h1>Unsplash It</h1>
               </a>
-              <h3>Beautiful placeholders using images from <a href="http://unsplash.com">unsplash</a></h3>
+              <h3>Beautiful placeholders using images from <a href="https://unsplash.com">unsplash</a></h3>
             </div>
           </div>
         </div>
@@ -88,7 +88,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <a href="http://unsplash.it/images">
+          <a href="https://unsplash.it/images">
             <h2 class="images">0</h2>
             <h3>Images</h3>
           </a>
@@ -112,12 +112,12 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Basic Usage</h2>
           <p class="lead">Just put your image size (width &amp; height) after our URL and you'll get a placeholder.</p>
-          <pre><code>http://unsplash.it/200/300</code></pre>
+          <pre><code>https://unsplash.it/200/300</code></pre>
           <p class="lead">To get a square image, just put the size you want.</p>
-          <pre><code>http://unsplash.it/200</code></pre>
+          <pre><code>https://unsplash.it/200</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354" alt="">
+          <img class="img-responsive" src="https://unsplash.it/458/354" alt="">
         </div>
       </div>
     </div>
@@ -130,10 +130,10 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Random image</h2>
           <p class="lead">Get a random image by appending <code>?random</code> to the end of the url.</p>
-          <pre><code>http://unsplash.it/200/300/?random</code></pre>
+          <pre><code>https://unsplash.it/200/300/?random</code></pre>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6">
-          <img class="img-responsive random-image" src="http://unsplash.it/458/354?random" alt="">
+          <img class="img-responsive random-image" src="https://unsplash.it/458/354?random" alt="">
         </div>
       </div>
     </div>
@@ -146,10 +146,10 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Grayscale</h2>
           <p class="lead">Use the <code>/g/</code> path to greyscale the image.</p>
-          <pre><code>http://unsplash.it/g/200/300</code></pre>
+          <pre><code>https://unsplash.it/g/200/300</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/g/458/354" alt="">
+          <img class="img-responsive" src="https://unsplash.it/g/458/354" alt="">
         </div>
       </div>
     </div>
@@ -162,7 +162,7 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">List images</h2>
           <p class="lead">Get a list of images by using the endpoint <code>/list</code></p>
-          <pre><code>http://unsplash.it/list</code></pre>
+          <pre><code>https://unsplash.it/list</code></pre>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6">
           <pre><code>[
@@ -173,8 +173,8 @@
         "filename": "51492538696.jpg",
         "id": 0,
         "author": "Alejandro Escamilla",
-        "author_url": "http://alejandroescamilla.com/",
-        "post_url": "http://unsplash.com/post/51492538696/download-by-alejandro-escamilla"
+        "author_url": "https://alejandroescamilla.com/",
+        "post_url": "https://unsplash.com/post/51492538696/download-by-alejandro-escamilla"
     }
 ]       </code></pre>
       </div>
@@ -189,11 +189,11 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Specific Image</h2>
           <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
-          <pre><code>http://unsplash.it/200/300?image=0</code></pre>
-          <p>You can find a list of all images <a href="http://unsplash.it/images">here.</a></p>
+          <pre><code>https://unsplash.it/200/300?image=0</code></pre>
+          <p>You can find a list of all images <a href="https://unsplash.it/images">here.</a></p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354?image=0" alt="">
+          <img class="img-responsive" src="https://unsplash.it/458/354?image=0" alt="">
         </div>
       </div>
     </div>
@@ -206,10 +206,10 @@
           <div class="clearfix"></div>
           <h2 class="section-heading">Blurred image</h2>
           <p class="lead">Get a blurred image by appending <code>?blur</code> to the end of the url.</p>
-          <pre><code>http://unsplash.it/200/300/?blur</code></pre>
+          <pre><code>https://unsplash.it/200/300/?blur</code></pre>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354?image=0&blur" alt="">
+          <img class="img-responsive" src="https://unsplash.it/458/354?image=0&blur" alt="">
         </div>
       </div>
     </div>
@@ -223,10 +223,10 @@
           <h2 class="section-heading">Crop Gravity</h2>
           <p class="lead">Select the cropping gravity by adding <code>?gravity</code> to the end of the url.</p>
           <p>Valid options are: <code>north, east, south, west, center</code></p>
-          <pre><code>http://unsplash.it/200/300/?gravity=east</code></pre>
+          <pre><code>https://unsplash.it/200/300/?gravity=east</code></pre>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-          <img class="img-responsive" src="http://unsplash.it/458/354?gravity=east" alt="">
+          <img class="img-responsive" src="https://unsplash.it/458/354?gravity=east" alt="">
         </div>
       </div>
     </div>
@@ -238,8 +238,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="http://github.com/Nijikokun">Nijiko Yonskai</a></p>
-          <p><a href="http://github.com/DMarby/unsplash-it">Source</a>  - <a href="https://github.com/DMarby/unsplash-it/blob/master/LICENSE.md">License</a></p>
+          <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
+          <p><a href="https://github.com/DMarby/unsplash-it">Source</a>  - <a href="https://github.com/DMarby/unsplash-it/blob/master/LICENSE.md">License</a></p>
           <p><a href="https://www.digitalocean.com/?refcode=b948482c9da6">Hosted by DigitalOcean</a></p>
         </div>
       </div>
