Initial ansible files, etc

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
               <a href="https://unsplash.it">
                 <h1>Unsplash It</h1>
               </a>
-              <h3>Beautiful placeholders using images from <a href="http://unsplash.com">unsplash</a></h3>
+              <h3>Beautiful placeholders using images from <a href="https://unsplash.com">unsplash</a></h3>
             </div>
           </div>
         </div>
