--- a/public/images.html
+++ b/public/images.html
@@ -82,7 +82,7 @@
           <div class="col-lg-12">
             <div class="intro-message">
               <a href="https://unsplash.it"><h1>Unsplash It</h1></a>
-              <h3>Beautiful placeholders using images from <a href="http://unsplash.com">unsplash</a></h3>
+              <h3>Beautiful placeholders using images from <a href="https://unsplash.com">unsplash</a></h3>
             </div>
           </div>
         </div>
