--- a/public/index.html
+++ b/public/index.html
@@ -188,7 +188,7 @@
         <div class="col-lg-5 col-sm-6">
           <div class="clearfix"></div>
           <h2 class="section-heading">Specific Image</h2>
-          <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url</p>
+          <p class="lead">Get a specific image by appending <code>?image</code> to the end of the url.</p>
           <pre><code>https://unsplash.it/200/300?image=0</code></pre>
           <p>You can find a list of all images <a href="https://unsplash.it/images">here.</a></p>
         </div>
