Re-worded `/list` section to also add period.

--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
           <div class="clearfix"></div>
           <h2 class="section-heading">List images</h2>
-          <p class="lead">Get a list of images by using the endpoint <code>/list</code></p>
+          <p class="lead">Get a list of images by using the <code>/list</code> endpoint.</p>
           <pre><code>https://unsplash.it/list</code></pre>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6">
