Update meta author tag

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>Unsplash It</title>
   <meta name="description" content="Beautiful placeholders using images from unsplash">
   <meta name="keywords" content="placeholders,images,unsplash">
-  <meta name="author" content="David Marby (http://dmarby.se)">
+  <meta name="author" content="David Marby (http://dmarby.se) & Nijiko Yonskai (https://github.com/nijikokun)">
   <meta name="robots" content="all">
   
   <meta property="og:site_name" content="Unsplash it">
