--- a/public/images.html
+++ b/public/images.html
@@ -138,9 +138,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
+            <p><a href="https://www.digitalocean.com?ref=unsplash.it"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="/digitalocean.png"></a></p>
             <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
             <p><a href="https://github.com/DMarby/unsplash-it">Source</a></p>
-            <p><a href="https://www.digitalocean.com/?refcode=b948482c9da6">Hosted by DigitalOcean</a></p>
           </div>
         </div>
       </div>
