Switch websocket connections to ws.unsplash.it

--- a/public/images.html
+++ b/public/images.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="placeholders,images,unsplash">
   <meta name="author" content="David Marby (http://dmarby.se) & Nijiko Yonskai (https://github.com/nijikokun)">
   <meta name="robots" content="all">
-  
+
   <meta property="og:site_name" content="Unsplash it">
   <meta property="og:title" content="Unsplash it">
   <meta property="og:description" content="Beautiful placeholders using images from unsplash">
@@ -35,14 +35,14 @@
   <link rel="apple-touch-icon" sizes="76x76" href="favicon-76.png">
   <link rel="apple-touch-icon" sizes="72x72" href="favicon-72.png">
   <link rel="apple-touch-icon" href="favicon-57.png">
-  
+
   <link rel="stylesheet" href="style.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyloadxt/1.0.5/jquery.lazyloadxt.fadein.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyloadxt/1.0.5/jquery.lazyloadxt.min.js"></script>
-  <script src="https://unsplash.it:4000/socket.io/socket.io.js"></script>
+  <script src="https://ws.unsplash.it:4000/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
