--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="keywords" content="placeholders,images,unsplash">
   <meta name="author" content="David Marby (http://dmarby.se) & Nijiko Yonskai (https://github.com/nijikokun)">
   <meta name="robots" content="all">
-  
+
   <meta property="og:site_name" content="Unsplash it">
   <meta property="og:title" content="Unsplash it">
   <meta property="og:description" content="Beautiful placeholders using images from unsplash">
@@ -38,11 +38,11 @@
 
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-  
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="https://unsplash.it:4000/socket.io/socket.io.js"></script>
+  <script src="https://ws.unsplash.it:4000/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script>
     $(document).ready(function() {
