Switch to non-https for web sockets temporarily

--- a/public/images.html
+++ b/public/images.html
@@ -42,7 +42,7 @@
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyloadxt/1.0.5/jquery.lazyloadxt.fadein.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.lazyloadxt/1.0.5/jquery.lazyloadxt.min.js"></script>
-  <script src="https://ws.unsplash.it:4000/socket.io/socket.io.js"></script>
+  <script src="http://ws.unsplash.it:4000/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript">
     $(document).ready(function() {
