--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
-  <script src="http://45.55.96.43:3000/socket.io/socket.io.js"></script>
+  <script src="https://unsplash.it:4000/socket.io/socket.io.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script>
     $(document).ready(function() {
