Add beluga CDN branding

--- a/public/images.html
+++ b/public/images.html
@@ -118,7 +118,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p><a href="https://www.digitalocean.com?ref=unsplash.it"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="/digitalocean.png"></a></p>
+            <p><a href="https://www.digitalocean.com?ref=unsplash.it"><img class="digitalocean" alt="Proudly hosted by DigitalOcean" src="/digitalocean.png"></a>
+            <span class="plus glyphicon glyphicon-plus" aria-hidden="true"></span>
+            <a href="https://belugacdn.com?ref=unsplash.it"><img class="belugacdn" alt="CDN provided by BelugaCDN" src="/belugacdn.png"></a></p>
             <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
             <p><a href="https://github.com/DMarby/unsplash-it">Source</a></p>
           </div>
