Clarify that we are not affiliated with unsplash.com

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
                 <h1>Unsplash It</h1>
               </a>
               <h3>Beautiful placeholders using images from <a href="https://unsplash.com">unsplash</a></h3>
+              <h4>This website is not affiliated with unsplash.com</h4>
             </div>
           </div>
         </div>
@@ -219,6 +220,8 @@
           <a href="https://belugacdn.com?ref=unsplash.it"><img class="belugacdn" alt="CDN provided by BelugaCDN" src="/belugacdn.png"></a></p>
           <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
           <p><a href="https://github.com/DMarby/unsplash-it">Source</a></p>
+          <p>Having trouble? Poke <a href="https://twitter.com/DMarby">@DMarby</a> on Twitter</p>
+          <p style="margin-top: -15px">This website is not affiliated with unsplash.com</p>
         </div>
       </div>
     </div>
