--- a/public/images.html
+++ b/public/images.html
@@ -82,6 +82,7 @@
             <div class="intro-message">
               <a href="https://unsplash.it"><h1>Unsplash It</h1></a>
               <h3>Beautiful placeholders using images from <a href="https://unsplash.com">unsplash</a></h3>
+              <h4>This website is not affiliated with unsplash.com</h4>
             </div>
           </div>
         </div>
@@ -123,6 +124,8 @@
             <a href="https://belugacdn.com?ref=unsplash.it"><img class="belugacdn" alt="CDN provided by BelugaCDN" src="/belugacdn.png"></a></p>
             <p>Created by <a href="http://dmarby.se">David Marby</a> & <a href="https://github.com/Nijikokun">Nijiko Yonskai</a></p>
             <p><a href="https://github.com/DMarby/unsplash-it">Source</a></p>
+            <p>Having trouble? Poke <a href="https://twitter.com/DMarby">@DMarby</a> on Twitter</p>
+            <p style="margin-top: -15px">This website is not affiliated with unsplash.com</p>
           </div>
         </div>
       </div>
